@@ -1,3 +1,8 @@
+2012-01-05 Borut Razem <borut.razem AT gmail.com>
+
+	* local/dhcp101.mk:
+	  created for Mac OS X universal builds on Mac OS X 10.4 i386 machine
+
 2012-01-02 Maarten Brock <sourceforge.brock AT dse.nl>
 
 	* local/cf-x86-x86_64-w64-mingw32.mk,
